- Added placeholder for the number of online players on your team (online) (#110) 

Bug Fixes: 
- Fixed problem with rank permissions


4.0: 
Features: 
- Updated to 1.17
- Included a new saving system (#134) (#163)
  - this saving system will massively improve performance on your server
- Added support for Traditional Chinese 
- Added the ability to set a max balance a team bank can have per team level (#151)
- Added the option for all teams to require a tag (#114)

Improvements: 
- Config updating is now completely automated
- Missing translations will be saved to a file to try and encourage community translations
- Teams can no longer spam ally requests (#148)
- Updated polish language file to contain more translations
- Added a way to remove a title with /team title (#127)
- If chest commands are disabled checks on hoppers are also disabled (#162)
- Added clarification to some config.yml comments (#141)

Bug Fixes:
- Fixed permission issue with /team echest (#142)
- Fixed error with command /team rank (#147)
- Fixed endCommands in /team rankup not working as expected (#152)
- Fixed bug meaning there was not a space at the start of a suffix (#158)
- Fixed error tree being displayed when update checker fails (#164)
- Fixed bug which caused an internal error to be thrown when help messages are displayed
- Fixed slight problem with help prompt for /team create (#114)

Development changes: 
- Reworked Team class to avoid code reuse
- Removed support for the depreciated event listener BelowNameChangeListener, Use spigot event observer pattern instead (#131)
- Removed hardcoding for config updating

4.0.1:

Bug fixes: 
- fixed bug causing teams to load details incorrectly when a color is not set (#175) (#174)

4.0.2: 
Bug Fixes: 
- Fixed bug causing betterteams to not start if there is problems with teamStorage (#184)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
